--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,8 @@
   "name": "JATE",
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack --mode production"
-    
+    "build": "webpack --mode production",
+    "start": "webpack"
   },
   "author": "2U",
   "license": "UNLICENSED",
@@ -25,7 +25,6 @@
     "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
-    "code-mirror-themes": "^1.0.0",
     "idb": "^6.1.2"
   }
 }
